# VSC-Python-Project-Template

./: .clangd  .gitignore  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci-auto-format-and-commit.yml
configs/: loggers.yml
csrc/: CMakeLists.txt
csrc/cmake/: cmake-parameters.md
csrc/cmake/compilers/: cuda-compiler-configs.cmake  cxx-compiler-configs.cmake
csrc/cmake/libraries/: libcuda.cmake  libpybind11.cmake  libtorch.cmake
csrc/cmake/utils/: common.cmake  lib-install.cmake  logging.cmake  run-python.cmake
csrc/cmake/vcpkg-triplets/: x64-linux.cmake
csrc/include/project-name/: system.hpp
csrc/include/project-name/math/: vec_add.hpp
csrc/include/project-name/utils/: address.hpp
csrc/include/simple_py/: system.hpp
csrc/include/simple_py/math/: vec_add.hpp
csrc/include/simple_py/utils/: address.hpp
csrc/include/template_project_name/utils/: address.hpp
csrc/lib/: CMakeLists.txt  _torch_ops_cxx.cpp
csrc/lib/cpu/: vec_add.cpp
csrc/lib/cuda/: vec_add.cu
csrc/lib/pet/: CMakeLists.txt  pet.cpp
csrc/lib/torch_ops/: CMakeLists.txt  vector_add.cpp
csrc/lib/torch_ops/cpu/: vec_add.cpp
csrc/lib/torch_ops/cuda/: vec_add.cu
csrc/scripts/: build.bat  build.sh  format.sh  msvc-bash.bat  setup-msbuild.bat  windows-purn-PATH.sh
csrc/test/: CMakeLists.txt  main.cpp  test.cpp
example_package/: __init__.py
requirements/: common.txt
scripts/: format.sh
src/example_package/: __init__.py
src/example_package/_torch_ops/include/template_project_name/: system.hpp
src/example_package/_torch_ops/include/template_project_name/math/: vec_add.hpp
src/example_package/_torch_ops/include/template_project_name/utils/: address.hpp
src/simple_py/: __init__.py
src/simple_py/utils/: clib_importer.py  common.py  logging_config.py
test/: test.py
